styles.css
/* ... */
.wb_shopping_cart {
    width: 100%;
    height: 100%;
}

.wb_shopping_cart.disabled {
    background: var(--success);
    color: white;
}

.wb_shopping_cart.disabled {
    background: var(--success);
    color: white;
}

.wb_shopping_cart[data-bookable="false"] {
    background: var(--warning);
}

#page-mod-booking-optiondates .dropdown-menu,
#page-mod-booking-edit_optiontemplate .dropdown-menu,
#page-mod-booking-optiontemplatessettings .dropdown-menu,
#page-mod-booking-teachers_instance_report .dropdown-menu,
#page-mod-booking-recalculateprices .dropdown-menu,
#page-mod-booking-mod .dropdown-menu,
#page-mod-booking-instancetemplateadd .dropdown-menu,
#page-mod-booking-importoptions .dropdown-menu,
#page-mod-booking-tagtemplates .dropdown-menu,
#page-mod-booking-importexcel .dropdown-menu,
#page-mod-booking-report .dropdown-menu,
#page-mod-booking-subscribeusers .dropdown-menu,
#page-mod-booking-viewconfirmation .dropdown-menu,
#page-mod-booking-editoptions .dropdown-menu {
    width: max-content;
}

/* Special rule to keep the dropdown menu of the table filter within width limits of the .dropdownMenuButton element */
#page-mod-booking-view .dropdown:not(.wunderbyteTableFilter .dropdown) > .dropdown-menu {
    width: max-content;
}

#page-mod-booking-report #studentsform table {
    margin-bottom: 15px;
}

.prepage-booking-page {
    margin-top: 30px;
    margin-bottom: 30px;
}

#prepage-booking-tabs {
    counter-reset: section;
}

#prepage-booking-tabs li {
    /*color: lightgray;*/
    color: #767676;
    list-style-type: none;
    font-size: 15px;
    width: 25%;
    float: left;
    position: relative;
    font-weight: bold;
}

#prepage-booking-tabs li.active {
    color: #357a32; /* Bootstrap success color.*/
}

/* Icon prepage progress tabs before any progress */
#prepage-booking-tabs li:before {
    width: 34px;
    display: inline-table;
    font-size: 20px;
    color: #fff;
    background: lightgray;
    border-radius: 50%;
    margin: 7px 7px;
    text-align: center;
    padding: 2px;
    font-family: Helvetica, sans-serif, Arial;
    font-weight: bolder;
    counter-increment: section;
    content: counter(section);
}

/* Prepage progress tabs connectors */
#prepage-booking-tabs li:after {
    content: 'asdf';
    width: 100%;
    height: 2px;
    background: lightgray;
    position: absolute;
    left: 0;
    top: 25px;
    z-index: -1;
}

/* Color number of the step and the connector before it */
#prepage-booking-tabs li.active:before,
#prepage-booking-tabs li.active:after {
    background: #357a32; /* Bootstrap success color.*/
    margin: 7px 7px;
    text-align: center;
}

#page-mod-booking-optionview ul.infolist {
    padding-inline-start: 10px;
}

#page-mod-booking-editoptions .editoption-youareediting-alert {
    position: sticky;
    top: 5px;
    z-index: 999;
    width: 70%;
}

#page-mod-booking-view .wunderbyte-table-list .action:not(.imageright-card .action) {
    position: absolute;
    top: 0;
    right: 0;
}

.wunderbyte-table-list .imageright-card .action {
    right: 25%;
}

.wunderbyte-table-list .booknow {
    margin-top: 1rem;
}

/* DO NOT USE #page-mod-booking-view because this needs to work in shortcodes too! */
.mod-booking-view-card-image {
    height: 220px;
    object-fit: cover;
}

/* DO NOT USE #page-mod-booking-view because this needs to work in shortcodes too! */
.mod-booking-view-list-image {
    width: inherit;
    height: 100%;
    object-fit: cover;
    max-height: 300px;
    border-radius: 0;
}

.mod-booking-view-list-image-half {
    width: inherit;
    height: 100%;
    object-fit: cover;
    border-radius: 0;
}

/* DO NOT USE #page-mod-booking-view because this needs to work in shortcodes too! */
.mod-booking-view-list-image.rounded-left,
.mod-booking-view-list-image.rounded-start {
    box-shadow: 3px 0 10px 1px rgba(0, 0, 0, 0.1);
    /* stylelint-disable-next-line declaration-no-important */
    border-top-right-radius: 0 !important;
    /* stylelint-disable-next-line declaration-no-important */
    border-bottom-right-radius: 0 !important;
}

/* DO NOT USE #page-mod-booking-view because this needs to work in shortcodes too! */
.mod-booking-view-list-image.rounded-right,
.mod-booking-view-list-image.rounded-end {
    box-shadow: -3px 0 10px 1px rgba(0, 0, 0, 0.1);
    /* stylelint-disable-next-line declaration-no-important */
    border-top-left-radius: 0 !important;
    /* stylelint-disable-next-line declaration-no-important */
    border-bottom-left-radius: 0 !important;
}

#page-mod-booking-editoptions div[id^='fgroup_id_buttonar_'] {
    position: sticky;
    bottom: 5px;
}

#page-mod-booking-editoptions div[id^='fgroup_id_buttonar_'] input[name='submitbutton'],
#page-mod-booking-editoptions div[id^='fgroup_id_buttonar_'] input[name='cancel'] {
    box-shadow: rgba(14, 30, 37, 0.12) 0 2px 4px 0, rgba(14, 30, 37, 0.32) 0 2px 16px 0;
}

#page-mod-booking-mod #fgroup_id_buttonar {
    position: sticky;
    bottom: 5px;
}

#page-mod-booking-mod #fgroup_id_buttonar  input[name='submitbutton'],
#page-mod-booking-mod #fgroup_id_buttonar  input[name='submitbutton2'],
#page-mod-booking-mod #fgroup_id_buttonar  input[name='cancel'] {
    box-shadow: rgba(14, 30, 37, 0.12) 0 2px 4px 0, rgba(14, 30, 37, 0.32) 0 2px 16px 0;
}

.bookinglinkbutton:not(#page-mod-booking-optionview .bookinglinkbutton) {
    background: var(--primary, var(--bs-btn-bg));
    border-radius: 8px;
    color: white;
    text-decoration: none;
}

#page-mod-booking-editoptions .changed-old-value {
    color: red;
}

/* Make sure that spans within this container don't break.
We need this for teachers for example. */
.flex-wrap-container {
    display: flex;
    flex-wrap: wrap;
}

.flex-wrap-element {
    display: inline-block;
    white-space: nowrap;
}

/* Styles for new report.php */
#accordion-usertables .columnclass.option {
    max-width: 100px;
}
/* ... */

